Fix image frames on smaller screens

--- a/_src/scss/_images.scss
+++ b/_src/scss/_images.scss
@@ -13,6 +13,8 @@ figure img {
   border: 1px solid #e5e5e5;
 
   @include up-to(m) {
+    border-right: 0;
+    border-left: 0;
     border-radius: 0;
   }
 }
